# larry4mac

./: .gitignore  Makefile  README.md  pyproject.toml
src/larry4mac/: __init__.py  wallpaper.py
tests/: __main__.py  test_wallpaper.py
